--- a/JM/static/css/slider.css
+++ b/JM/static/css/slider.css
@@ -451,63 +451,21 @@
 	}
 }
 
-* {
-	box-sizing: border-box;
+@media(max-width:768px) {
+	.image_vh {
+		height: 133vh !important;
+	}
 }
 
-*::before, *::after {
-	box-sizing: border-box;
+@media(max-width:480px) {
+	.image_vh {
+		height: 65vh !important;
+	}
 }
 
-body {
-	font-family: 'Barlow', sans-serif;
-	font-size: 1.125rem;
-	font-weight: 400;
-	line-height: 1.6;
-	color: #8d8d8d;
-	background: #fff;
-	text-rendering: optimizeLegibility;
-	overflow-x: hidden;
-}
-
-a {
-	color: #8d8d8d;
-	text-decoration: none;
-}
-
-a:hover {
-	color: #232323;
-}
-
-nav {
-	position: relative;
-	z-index: 2;
-	padding: 1.25rem 0 1.25rem 0;
-}
-
-nav ul {
-	line-height: 2.2;
-	display: flex;
-	justify-content: flex-start;
-}
-
-nav ul li {
-	margin: 0.325rem 0;
-}
-
-#logo {
-	color: #232323;
-	font-weight: 700;
-	font-size: 1.125rem;
-}
-
-#highlight {
-	color: #e83f43;
-}
-
-img {
+.image_vh {
 	width: 100%;
-	height: 43vh;
+	height: 80vh;
 	object-fit: cover;
 }
 
@@ -563,7 +521,7 @@ img {
 	margin: 1rem 0;
 }
 
-button {
+.bt_on {
 	position: relative;
 	display: inline-block;
 	cursor: pointer;
@@ -743,8 +701,8 @@ button {
 		padding: 2.5rem 2.5rem 3rem 2.5rem;
 		background: #fff;
 	}
-	img {
-		height: 60vh;
+	.image_vh {
+		height: 176vh;
 	}
 	.description {
 		font-size: 1.25rem;
@@ -768,9 +726,6 @@ button {
 		position: relative;
 		padding: 0;
 		justify-content: flex-end;
-	}
-	nav {
-		padding: 1.75rem 0 1.75rem 0;
 	}
 	nav ul {
 		line-height: 2.2;
